--- a/jenkinsfile
+++ b/jenkinsfile
@@ -51,11 +51,11 @@ pipeline {
             }
         }
 
-        stage('Terraform Destroy') {
-            steps {
-                sh 'terraform destroy -auto-approve'
-            }
-        }
+        // stage('Terraform Destroy') {
+        //     steps {
+        //         sh 'terraform destroy -auto-approve'
+        //     }
+        // }
 
 
     }
